--- a/main.bib
+++ b/main.bib
@@ -318,20 +318,6 @@
   publisher = {e-Oppi}
 }
 
-@online{zucconi2016secrets,
-  author  = {Zucconi, Alan},
-  title   = {The secrets of colour interpolation},
-  url     = {https://www.alanzucconi.com/2016/01/06/colour-interpolation/},
-  urldate = {2023-05-14}
-}
-
-@online{mmcif_dictionary,
-  author  = {wwPDB},
-  title   = {PDBx/mmCIF Dictionary Resources},
-  url     = {https://mmcif.wwpdb.org/},
-  urldate = {2023-05-14}
-} 
-
 @article{katritzky1996quantum,
   author  = {Karelson, Mati and Lobanov, Victor S. and Katritzky, Alan R.},
   title   = {Quantum-Chemical Descriptors in QSAR/QSPR Studies},
@@ -397,3 +383,31 @@
   keywords = {Psilocybin, Hallucinogens, Psychedelics, Hallucinogenic mushrooms, Pharmacology, Neurobiology, Serotonin, 5-HT2 receptors, 5-HT1 receptors, Brain imaging, Psychological measures, Behavioral studies},
   abstract = {Psilocybin, a psychoactive alkaloid contained in hallucinogenic mushrooms, is nowadays given a lot of attention in the scientific community as a research tool for modeling psychosis as well as due to its potential therapeutic effects. However, it is also a very popular and frequently abused natural hallucinogen. This review summarizes all the past and recent knowledge on psilocybin. It briefly deals with its history, discusses the pharmacokinetics and pharmacodynamics, and compares its action in humans and animals. It attempts to describe the mechanism of psychedelic effects and objectify its action using modern imaging and psychometric methods. Finally, it describes its therapeutic and abuse potential.}
 }
+
+@book{tsai2003introduction,
+  title={An introduction to computational biochemistry},
+  author={Tsai, C Stan},
+  year={2003},
+  publisher={John Wiley \& Sons}
+}
+
+@online{britannica_molecule,
+  author = "{Britannica, T. Editors of Encyclopaedia}",
+  title = "Molecule",
+  url = "https://www.britannica.com/science/molecule",
+  urldate = {2023-05-14}
+}
+
+@online{zucconi2016secrets,
+  author  = {Zucconi, Alan},
+  title   = {The secrets of colour interpolation},
+  url     = {https://www.alanzucconi.com/2016/01/06/colour-interpolation/},
+  urldate = {2023-05-14}
+}
+
+@online{mmcif_dictionary,
+  author  = {wwPDB},
+  title   = {PDBx/mmCIF Dictionary Resources},
+  url     = {https://mmcif.wwpdb.org/},
+  urldate = {2023-05-14}
+} 
