--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -79,7 +79,13 @@
         Typescript
     },
     abstract    = {%
-        TODO
+      Partial atomic charges play a crucial role in computational chemistry as they help describe a molecule's electron density, providing essential insights into its properties.
+      
+      Visualizing these partial atomic charges was previously done using the Litemol viewer. However, the Litemol viewer is no longer maintained, and its replacement, the Mol* viewer, currently lacks support for visualizing partial atomic charges.
+      
+      This thesis addresses this gap in functionality by extending the Mol* viewer to support the visualization of partial atomic charges. The extended Mol* viewer is subsequently integrated into the Atomic Charge Calculator II and αCharges web applications. In addition, we have upgraded the functionality of the Atomic Charge Calculator II application to permit multiple calculations within a single request.
+      
+      These advancements provide researchers with enhanced visualization capabilities and user interfaces for calculating and analyzing partial atomic charges. The significance of these improvements to the field of computational chemistry is underscored by their contribution to a publication in the Nucleic Acids Research journal
     },
     thanks      = {%
         TODO
