--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -151,7 +151,7 @@ Through these efforts, this thesis seeks to advance the field of computational c
 \chapter{Theory}
 \label{chapter:theory}
 
-Theoretical concepts are fundamental to the study of computational chemistry, providing a framework for analyzing molecular structures and properties. This chapter focuses on four key areas of theory, beginning with an overview of molecular structures in Section 1.1. Section 1.2 explores partial atomic charges and their importance in computational chemistry. Section 1.3 provides an examination of chemical file formats, including the advantages and disadvantages of different file formats for storing molecular data. Finally, section 1.4 describes color interpolation, a critical technique for visualizing partial atomic charges in molecular structures.
+Theoretical concepts are fundamental to the study of computational chemistry, providing a framework for analyzing molecular structures and properties. This chapter focuses on four key areas of theory, beginning with an overview of molecular structures in Section \ref{section:molecular_structure}. Section \ref{section:partial_atomic_charges} explores partial atomic charges and their importance in computational chemistry. Section \ref{section:chemical_file_formats} provides an examination of chemical file formats, including the advantages and disadvantages of different file formats for storing molecular data. Finally, Section \ref{section:color_interpolation} describes color interpolation, a critical technique for visualizing partial atomic charges in molecular structures.
 
 By providing a comprehensive overview of these theoretical concepts, this chapter provides a strong foundation for the subsequent chapters, focusing on the implementation and analysis of the Mol* extension for visualizing partial atomic charges in molecular structures.
 
@@ -263,8 +263,8 @@ Figure \ref{fig:sdf } depicts the contents of an SDF file containing the structu
     breaklines=true,
     columns=fullflexible
     }
-    \lstinputlisting[firstline=1, lastline=10]{phenols.sdf}
-    \caption{First ten lines of a SDF file containing the structure of a phenol.}
+    \lstinputlisting[firstline=1, lastline=10]{figures/ethanol.sdf}
+    \caption{SDF file containing the structure of a ethanol.}
     \label{fig:sdf}
   \end{figure}
 
@@ -282,8 +282,8 @@ The Mol2 file format is another text-based format for storing small molecular st
     breaklines=true,
     columns=fullflexible
     }
-    \lstinputlisting[firstline=1, lastline=10]{phenols.mol2}
-    \caption{First ten lines of a MOL2 file containing the structure of a phenol.}
+    \lstinputlisting[firstline=1, lastline=10]{figures/ethanol.mol2}
+    \caption{MOL2 file containing the structure of a ethanol.}
     \label{fig:mol2}
   \end{figure}
 
@@ -815,7 +815,7 @@ To incorporate this coloring into αCharges, the backend of the application was 
   \begin{center}
     \includegraphics[width=\textwidth,frame]{figures/alpha-charges-results.png}
   \end{center}
-  \caption{Result page of the αCharges application. The control for switching to the pLDDT color theme is highlighted in red.}
+  \caption[Result page of the αCharges application.]{Result page of the αCharges application. The control for switching to the pLDDT color theme is highlighted in red.}
   \label{fig:alpha-charges-results}
 \end{figure}
 
